Added functionality to return labels associated with a pod as part of the returned payload for get all pods api.
